<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <View
                    android:id="@+id/view"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginHorizontal="@dimen/dimen_small"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:background="@drawable/sh_rounded_two_corner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/DefaultTextView"
                    android:layout_marginStart="@dimen/dimen_standard"
                    android:text="@string/hello_welcome"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view"
                    app:layout_constraintEnd_toEndOf="@id/view"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@id/view"
                    app:layout_constraintTop_toTopOf="@+id/view"
                    app:layout_constraintVertical_bias="0.40" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/DefaultTextView"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/dimen_super_small"
                    android:layout_marginEnd="@dimen/dimen_small"
                    android:text="@string/app_description"
                    android:textColor="@color/secondaryTextColor"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginEnd="@dimen/dimen_large"
                    android:src="@drawable/ic_placeholder"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="@+id/view"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="@dimen/dimen_standard">

            <TextView
                android:id="@+id/textView3"
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_standard"
                android:text="@string/today_news"
                android:textColor="@color/primaryTextColor"
                android:textSize="15sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_plants_pict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small" />

            <TextView
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_standard"
                android:text="@string/products"
                android:textColor="@color/primaryTextColor"
                android:textSize="15sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_small"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pgb_home"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>