<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/secondaryColor"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/dimen_large" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/dimen_super_large" />

                <View
                    android:id="@+id/view_camera"
                    android:layout_width="0dp"
                    android:layout_height="190dp"
                    android:layout_marginHorizontal="@dimen/dimen_small"
                    android:layout_marginTop="@dimen/dimen_super_small"
                    android:layout_marginBottom="@dimen/dimen_small"
                    android:background="@drawable/sh_rounded_two_corner"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="@dimen/dimen_standard"
                    android:src="@drawable/ic_picture"
                    app:layout_constraintBottom_toBottomOf="@+id/view_camera"
                    app:layout_constraintStart_toEndOf="@id/guideline_start_camera"
                    app:layout_constraintTop_toTopOf="@+id/view_camera"
                    app:layout_constraintVertical_bias="0.55"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_camera"
                    style="@style/DefaultTextView"
                    android:text="@string/take_picture"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view_camera"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end_camera"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/view_camera"
                    app:layout_constraintVertical_bias="0.40" />

                <TextView
                    android:id="@+id/textView2_camera"
                    style="@style/DefaultTextView"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/dimen_standard"
                    android:layout_marginTop="@dimen/dimen_super_small"
                    android:text="@string/app_description"
                    android:textAlignment="textEnd"
                    android:textColor="@color/secondaryTextColor"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@+id/textView_camera"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/textView_camera" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_large"
                    android:background="@drawable/btn_outlined_color"
                    android:elevation="2dp"
                    android:padding="@dimen/dimen_standard"
                    android:text="@string/add_photo"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/view_camera"
                    app:layout_constraintEnd_toEndOf="@+id/view_camera"
                    app:layout_constraintTop_toBottomOf="@+id/view_camera" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageButton
                    android:id="@+id/btn_close_camera_act"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_icon"
                    android:src="@drawable/ic_cancel" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dimen_standard"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start_camera2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimen_standard" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end_camera2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96107054" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_camera_capture"
                android:layout_width="0dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_large"
                android:src="@drawable/ic_add_photo"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_camera2"
                app:layout_constraintStart_toEndOf="@id/guideline_start_camera2"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/grp_content_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="btn_save_bookmark,tv_title_plants, tv_prediction_value, tv_description_title,tv_description_plant,rv_products,tv_products_title"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_title_plants"
                style="@style/DefaultTextView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dimen_standard"
                android:layout_marginEnd="@dimen/dimen_standard"
                android:textColor="@color/primaryTextColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_camera2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline_start_camera2"
                app:layout_constraintTop_toBottomOf="@+id/btn_analyze_photo"
                tools:text="Mango tree" />

            <TextView
                android:id="@+id/tv_prediction_value"
                style="@style/DefaultTextView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dimen_super_small"
                android:layout_marginEnd="@dimen/dimen_standard"
                android:textColor="@android:color/darker_gray"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_camera2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/guideline_start_camera2"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_plants"
                tools:text="Prediction: 0.445453435" />

            <TextView
                android:id="@+id/tv_description_title"
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_standard"
                android:text="@string/description"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/guideline_start_camera2"
                app:layout_constraintTop_toBottomOf="@+id/tv_prediction_value" />

            <TextView
                android:id="@+id/tv_description_plant"
                style="@style/DefaultTextView"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/dimen_super_small"
                android:textColor="@color/primaryTextColor"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_camera2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline_start_camera2"
                app:layout_constraintTop_toBottomOf="@id/tv_description_title" />

            <TextView
                android:id="@+id/tv_products_title"
                style="@style/DefaultTextView"
                android:layout_marginTop="@dimen/dimen_standard"
                android:text="@string/products"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/guideline_start_camera2"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_plant" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_super_small"
                app:layout_constraintEnd_toStartOf="@id/guideline_end_camera2"
                app:layout_constraintStart_toEndOf="@id/guideline_start_camera2"
                app:layout_constraintTop_toBottomOf="@id/tv_products_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_save_bookmark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_large"
                android:background="@drawable/btn_color"
                android:text="@string/bookmark_result"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_description_plant"
                app:layout_constraintStart_toStartOf="@id/tv_description_plant"
                app:layout_constraintTop_toBottomOf="@id/rv_products" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_analyze_photo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/dimen_large"
                android:backgroundTint="@color/primaryColor"
                android:contentDescription="@string/analyze"
                android:elevation="2dp"
                android:src="@drawable/ic_scan"
                android:visibility="gone"
                app:borderWidth="3dp"
                app:fabCustomSize="60dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_camera_capture"
                app:layout_constraintEnd_toStartOf="@+id/guideline_end_camera2"
                app:layout_constraintTop_toBottomOf="@+id/img_camera_capture"
                app:tint="@color/secondaryColor"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pgb_camera"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>